# c-demo-app

./: .gitignore  CMakeLists.txt  README.md
src/: main.c  routes.c  routes.h  swagger.c  swagger.h  users.c  users.h
tests/: test_routes.c  test_users.c  unity.h
